unpackaged/main/default/objects/Job__c/fields/Accepted_Estimate_Way__c.field-meta.xml
<CustomField>
    <fullName>Accepted_Estimate_Way__c</fullName>
    <label>Estimate Acceptance Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Via FSL App, No Discounts</fullName>
            </value>
            <value>
                <fullName>Via Office, Without Discounts</fullName>
            </value>
            <value>
                <fullName>Via Office, With Discounts</fullName>
            </value>
            <value>
                <fullName>Via Journey With 10% Charge Labour</fullName>
            </value>
            <value>
                <fullName>Via Journey, Reminder, No Discount</fullName>
            </value>
            <value>
                <fullName>Via FSL App, With Discounts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>