unpackaged/main/default/objects/Job__c/fields/Account_Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Job_Number__c</fullName>
    <label>Account Job Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>