unpackaged/main/default/objects/Job__c/fields/Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference__c</fullName>
    <formula>Account__r.Account_Reference__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Reference</label>
    <type>Text</type>
</CustomField>