unpackaged/main/default/objects/Job__c/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>Is the Account: Cash, Credit or Key Account?</description>
    <formula>TEXT(Account__r.Account_Type__c)</formula>
    <inlineHelpText>Is the Account: Cash, Credit or Key Account?</inlineHelpText>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>