unpackaged/main/default/objects/Job__c/fields/All_Work_Order_in_Status_of_Complete__c.field-meta.xml
<CustomField>
    <fullName>All_Work_Order_in_Status_of_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will be ticked when All Work Orders are in a Status of Complete</description>
    <inlineHelpText>Will be ticked when All Work Orders are in a Status of Complete</inlineHelpText>
    <label>All Work Order in Status of Complete</label>
    <type>Checkbox</type>
</CustomField>