unpackaged/main/default/objects/Job__c/fields/Already_duplicated_Job_for_Pending_Est__c.field-meta.xml
<CustomField>
    <fullName>Already_duplicated_Job_for_Pending_Est__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Already duplicated Job for Pending Estimate Journey with Offer</description>
    <label>Already duplicated Job for Pending Est</label>
    <type>Checkbox</type>
</CustomField>