unpackaged/main/default/objects/Job__c/fields/Approval_Process_Unlock_Record__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process_Unlock_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To unlock Job Status must be &#39;For Client Approval&#39; and &#39;Approval Process Unlock Record&#39; is ticked (To be ticked via a Zap, to unlock the Job record)</description>
    <inlineHelpText>To unlock Job Status must be &#39;For Client Approval&#39; and &#39;Approval Process Unlock Record&#39; is ticked (To be ticked via a Zap, to unlock the Job record)</inlineHelpText>
    <label>Approve Estimate (Key Account Only)</label>
    <type>Checkbox</type>
</CustomField>