unpackaged/main/default/objects/Job__c/fields/Attendance_Notes_for_Office__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Notes_for_Office__c</fullName>
    <description>Summary of all &quot;attendance notes&quot; for this Job.
Attendance notes are recorded on each Service Appointment at the end of the attendance.</description>
    <label>Attendance Notes for Office</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>