unpackaged/main/default/objects/Job__c/fields/Attendance_Report__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Attendance Report</label>
    <type>Checkbox</type>
</CustomField>