unpackaged/main/default/objects/Job__c/fields/Attendance_Report_for_Customer__c.field-meta.xml
<CustomField>
    <fullName>Attendance_Report_for_Customer__c</fullName>
    <inlineHelpText>Summary of all &quot;attendance reports&quot; for this Job.
Attendance reports are recorded on each Service Appointment at the end of the attendance.</inlineHelpText>
    <label>Attendance Report for Customer</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>