unpackaged/main/default/objects/Job__c/fields/Authorisation__c.field-meta.xml
<CustomField>
    <fullName>Authorisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Valid Authorisation record (at time of booking)</description>
    <inlineHelpText>Valid Authorisation record (at time of booking)</inlineHelpText>
    <label>Authorisation</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>You can only add a card if it is linked to this jobs account.</errorMessage>
        <filterItems>
            <field>$Source.Account__c</field>
            <operation>equals</operation>
            <valueField>asp04__Authorisation__c.Customer__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>asp04__Authorisation__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>