unpackaged/main/default/objects/Job__c/fields/Brief_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Brief_Job_Description__c</fullName>
    <label>Brief Job Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>