unpackaged/main/default/objects/Job__c/fields/Card_on_Record_End__c.field-meta.xml
<CustomField>
    <fullName>Card_on_Record_End__c</fullName>
    <formula>RIGHT( Authorisation__r.asp04__Account_Reference__c ,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card on Record End</label>
    <type>Text</type>
</CustomField>