unpackaged/main/default/objects/Job__c/fields/Card_on_Record_Start__c.field-meta.xml
<CustomField>
    <fullName>Card_on_Record_Start__c</fullName>
    <label>Card on Record Start</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>