unpackaged/main/default/objects/Job__c/fields/Charge_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Charge_Deposit__c</fullName>
    <formula>Charge_Gross__c / 2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>