unpackaged/main/default/objects/Job__c/fields/Charge_Gross__c.field-meta.xml
<CustomField>
    <fullName>Charge_Gross__c</fullName>
    <formula>Charge_Net__c * 1.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Gross</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>