unpackaged/main/default/objects/Job__c/fields/Charge_Labour_Discounted_Total__c.field-meta.xml
<CustomField>
    <fullName>Charge_Labour_Discounted_Total__c</fullName>
    <label>Charge Labour Discounted Total</label>
    <summarizedField>Costs_and_Charges__c.Chrage_Labour_Discounted__c</summarizedField>
    <summaryForeignKey>Costs_and_Charges__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>