unpackaged/main/default/objects/Job__c/fields/Charge_List_Price_Services__c.field-meta.xml
<CustomField>
    <fullName>Charge_List_Price_Services__c</fullName>
    <label>Charge List Price Services</label>
    <summarizedField>Costs_and_Charges__c.Charge_List_Price_Services__c</summarizedField>
    <summaryFilterItems>
        <field>Costs_and_Charges__c.Include_in_estimate__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Costs_and_Charges__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>