unpackaged/main/default/objects/Job__c/fields/Charge_Policy__c.field-meta.xml
<CustomField>
    <fullName>Charge_Policy__c</fullName>
    <label>Charge Policy?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Chargeable</fullName>
            </value>
            <value>
                <fullName>Call back</fullName>
            </value>
            <value>
                <fullName>£60 Estimate</fullName>
            </value>
            <value>
                <fullName>FOC Estimate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>