unpackaged/main/default/objects/Job__c/fields/Charge_Total__c.field-meta.xml
<CustomField>
    <fullName>Charge_Total__c</fullName>
    <label>Charge Total</label>
    <summarizedField>Costs_and_Charges__c.Charge_Total__c</summarizedField>
    <summaryForeignKey>Costs_and_Charges__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>