unpackaged/main/default/objects/Job__c/fields/Cloned_From_Job__c.field-meta.xml
<CustomField>
    <fullName>Cloned_From_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cloned From Job</label>
    <referenceTo>Job__c</referenceTo>
    <relationshipLabel>Jobs (Cloned From Job)</relationshipLabel>
    <relationshipName>Jobs2</relationshipName>
    <type>Lookup</type>
</CustomField>