unpackaged/main/default/objects/Job__c/fields/Cloned_Job__c.field-meta.xml
<CustomField>
    <fullName>Cloned_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cloned Job</label>
    <type>Checkbox</type>
</CustomField>