unpackaged/main/default/objects/Job__c/fields/Combined_Scope_of_Works_for_All_WOs__c.field-meta.xml
<CustomField>
    <fullName>Combined_Scope_of_Works_for_All_WOs__c</fullName>
    <label>Combined Scope of Works for All WOs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>