unpackaged/main/default/objects/Job__c/fields/Consolidated_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Consolidated_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consolidated Invoice</label>
    <referenceTo>Customer_Invoice__c</referenceTo>
    <relationshipLabel>Jobs (Consolidated Invoice)</relationshipLabel>
    <relationshipName>Jobs1</relationshipName>
    <type>Lookup</type>
</CustomField>