unpackaged/main/default/objects/Job__c/fields/Contact_Email_who_Raised_Job__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email_who_Raised_Job__c</fullName>
    <description>Email Address of the Contact who raised the Job</description>
    <inlineHelpText>Email Address of the Contact who raised the Job</inlineHelpText>
    <label>Contact Email who Raised Job</label>
    <type>Email</type>
</CustomField>