unpackaged/main/default/objects/Job__c/fields/Cost_Fixed_Price_Admin__c.field-meta.xml
<CustomField>
    <fullName>Cost_Fixed_Price_Admin__c</fullName>
    <label>Cost Fixed Price Admin</label>
    <summarizedField>Costs_and_Charges__c.Fixed_Price_Admin_Fee_2__c</summarizedField>
    <summaryFilterItems>
        <field>Costs_and_Charges__c.Include_in_estimate__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Costs_and_Charges__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>