unpackaged/main/default/objects/Job__c/fields/Cost_Material_PO__c.field-meta.xml
<CustomField>
    <fullName>Cost_Material_PO__c</fullName>
    <label>Cost Material PO</label>
    <summarizedField>Costs_and_Charges__c.Cost_Material_POs__c</summarizedField>
    <summaryForeignKey>Costs_and_Charges__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>