unpackaged/main/default/objects/Job__c/fields/Cost_Materials_Engineer__c.field-meta.xml
<CustomField>
    <fullName>Cost_Materials_Engineer__c</fullName>
    <label>Cost Materials Engineer</label>
    <summarizedField>Costs_and_Charges__c.Cost_Materials_Engineer__c</summarizedField>
    <summaryForeignKey>Costs_and_Charges__c.Job__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>