unpackaged/main/default/objects/Job__c/fields/Count_of_Open_Cases__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Open_Cases__c</fullName>
    <label>Count of Open Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>