unpackaged/main/default/objects/Job__c/fields/Created_By_Profile_Name__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Profile_Name__c</fullName>
    <formula>IF(TRIM(CreatedBy.Profile.Name)=&#39;PT1&#39;, &#39;System Administrator&#39;,CreatedBy.Profile.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created By Profile Name</label>
    <type>Text</type>
</CustomField>