unpackaged/main/default/objects/Job__c/fields/Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Credit_Value__c</fullName>
    <label>Credit Value</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>