unpackaged/main/default/objects/Job__c/fields/Customer_Facing_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Facing_Description__c</fullName>
    <label>Job Title</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>