unpackaged/main/default/objects/Job__c/fields/Customer_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_First_Name__c</fullName>
    <formula>Job_Raised_by__r.FirstName</formula>
    <label>Customer First Name</label>
    <type>Text</type>
</CustomField>