unpackaged/main/default/objects/Job__c/fields/Customer_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Customer_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Invoice</label>
    <referenceTo>Customer_Invoice__c</referenceTo>
    <relationshipLabel>Jobs (Customer Invoice)</relationshipLabel>
    <relationshipName>Consolidated_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>