unpackaged/main/default/objects/Job__c/fields/Customer_Payment_Confirmation_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Customer_Payment_Confirmation_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked if the Customer Payment Confirmation Email has been sent</description>
    <inlineHelpText>Ticked if the Customer Payment Confirmation Email has been sent</inlineHelpText>
    <label>Customer Payment Confirmation Email Sent</label>
    <type>Checkbox</type>
</CustomField>