unpackaged/main/default/objects/Job__c/fields/Date_Time_Approval_Process_Unlock_Record__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Approval_Process_Unlock_Record__c</fullName>
    <description>The date and time the field &#39;Approval Process Unlock Record&#39; was ticked.</description>
    <inlineHelpText>The date and time the field &#39;Approval Process Unlock Record&#39; was ticked.</inlineHelpText>
    <label>Date/Time Approval Process Unlock Record</label>
    <type>DateTime</type>
</CustomField>