unpackaged/main/default/objects/Job__c/fields/Date_Time_Estimate_Approved_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Estimate_Approved_by_Customer__c</fullName>
    <label>Date/Time Estimate Approved by Customer</label>
    <type>DateTime</type>
</CustomField>