unpackaged/main/default/objects/Job__c/fields/Date_Time_Estimate_Canx_email_sent_Cust__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Estimate_Canx_email_sent_Cust__c</fullName>
    <description>The date/time the Cancellation email was sent to the Customer when &#39;Job Status&#39; set to &#39;Cancelled&#39;</description>
    <inlineHelpText>The date/time the Cancellation email was sent to the Customer when &#39;Job Status&#39; set to &#39;Cancelled&#39;</inlineHelpText>
    <label>Date/Time Estimate Canx email sent Cust</label>
    <type>DateTime</type>
</CustomField>