unpackaged/main/default/objects/Job__c/fields/Date_Time_Last_Estimate_sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Last_Estimate_sent_to_Customer__c</fullName>
    <label>Date/Time Last Estimate sent to Customer</label>
    <type>DateTime</type>
</CustomField>