unpackaged/main/default/objects/Job__c/fields/Deposit_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit Invoice</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Customer_Invoice__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Deposit</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Customer_Invoice__c</referenceTo>
    <relationshipLabel>Jobs</relationshipLabel>
    <relationshipName>Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>