unpackaged/main/default/objects/Job__c/fields/Deposit_Invoice_Balance_Outstanding__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Balance_Outstanding__c</fullName>
    <formula>Charge_Deposit__c  - Deposit_Invoice_Balance_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deposit Invoice Balance Outstanding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>