unpackaged/main/default/objects/Job__c/fields/Deposit_Invoice_Balance_Received__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Invoice_Balance_Received__c</fullName>
    <description>Deposit Invoice Sum of Payments</description>
    <formula>Deposit_Invoice__r.Sum_of_Payments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Deposit Invoice Sum of Payments</inlineHelpText>
    <label>Deposit Invoice Balance Received</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>